export const auth = {
  login: {
    id: 'LOGIN_ID',
    inputEmail: 'LOGIN_INPUT_EMAIL',
    inputPassword: 'LOGIN_INPUT_PASSWORD',
    buttonSubmit: 'LOGIN_BUTTON_SUBMIT',
    buttonRemind: 'LOGIN_BUTTON_REMIND',
    error: 'LOGIN_ERROR',
  },
  register: {
    id: 'REGISTER_ID',
    inputEmail: 'REGISTER_INPUT_EMAIL',
    inputPassword: 'REGISTER_INPUT_PASSWORD',
    inputPasswordRepeat: 'REGISTER_INPUT_PASSWORD_REPEAT',
    buttonSubmit: 'REGISTER_BUTTON_SUBMIT',
    error: 'REGISTER_ERROR',
  },
  remindPassword: {
    id: 'REMIND_PASSWORD_ID',
    inputEmail: 'REMIND_PASSWORD_INPUT_EMAIL',
    buttonSubmit: 'REMIND_PASSWORD_BUTTON_SUBMIT',
    error: 'REMIND_PASSWORD_ERROR',
  },
};

export const app = {
  hamburger: {
    id: 'HAMBURGER_ID',
  },
  backArrow: {
    id: 'BACK_ARROW',
  },
  main: {
    id: 'MAIN_ID',
    buttonSurvey: 'MAIN_BUTTON_SURVEY',
    buttonStatistics: 'MAIN_BUTTON_STATISTICS',
    date: 'MAIN_DATE',
  },
  drawer: {
    id: 'DRAWER_ID',
    linkMain: 'DRAWER_LINK_MAIN',
    linkProfile: 'DRAWER_LINK_PROFILE',
    linkSettings: 'DRAWER_LINK_SETTINGS',
    linkAbout: 'DRAWER_LINK_ABOUT',
    linkLogout: 'DRAWER_LINK_LOGOUT',
    buttonClose: 'DRAWER_BUTTON_CLOSE',
  },
  profile: {
    id: 'PROFILE_ID',
    inputWeight: 'PROFILE_INPUT_WEIGHT',
    inputHeight: 'PROFILE_INPUT_HEIGHT',
    inputAge: 'PROFILE_INPUT_AGE',
    buttonSubmit: 'PROFILE_BUTTON_SELECT',
    error: 'PROFILE_ERROR',
  },
  settings: {
    id: 'SETTINGS_ID',
    inputEmail: 'SETTINGS_INPUT_EMAIL',
    buttonReset: 'SETTINGS_BUTTON_RESET',
  },
  about: {
    id: 'ABOUT_ID',
  },
  survey: {
    id: 'SURVEY_ID',
    selectorSleepHour: {
      button: 'SURVEY_SELECTOR_SLEEP_HOUR_BUTTON',
      value: 'SURVEY_SELECTOR_SLEEP_HOUR_VALUE',
    },
    selectorWakeUpHour: {
      button: 'SURVEY_SELECTOR_WAKE_UP_HOUR_BUTTON',
      value: 'SURVEY_SELECTOR_WAKE_UP_HOUR_value',
    },
    toggleFood: 'SURVEY_TOGGLE_FOOD',
    toggleAlcohol: 'SURVEY_TOGGLE_ALCOHOL',
    toggleCaffeine: 'SURVEY_TOGGLE_CAFFEINE',
    buttonSubmit: 'SURVEY_BUTTON_SUBMIT',
  },
  statistics: {
    id: 'STATISTICS_ID',
    emptyView: 'STATISTICS_EMPTY_VIEW',
    emptyButton: 'STATISTICS_EMPTY_BUTTON',
  },
  datePicker: {
    button: 'DATEPICKER_BUTTON',
    date: 'DATEPICKER_DATE',
  },
  moodSelector: {
    id: 'MOOD_SELECTOR_ID',
    mood: [
      'MOOD_SELECTOR_SAD',
      'MOOD_SELECTOR_NORMAL',
      'MOOD_SELECTOR_GOOD',
    ],
  },
};
